<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_primary"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/device_status"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/connected_device_toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="33dp"-->
<!--        android:layout_marginBottom="612dp"-->
<!--        android:background="@color/light_blue"-->
<!--        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
<!--        app:layout_constraintVertical_bias="0.0">-->

<!--    </androidx.appcompat.widget.Toolbar>-->

    <TextView
        android:id="@+id/connected_device_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text="@string/connected_device"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/supported_devices_cardView"
        android:layout_width="380dp"
        android:layout_height="108dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connected_device_title">

        <include
            android:id="@+id/pluginButton"
            layout="@layout/plugin_button" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="14dp"
            android:gravity="start"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/deviceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="45dp"
            android:gravity="start"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/batteryLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="14dp"
            android:gravity="start"
            android:textSize="16sp" />

        <Button
            android:id="@+id/disconnectButton"
            style="@android:style/TextAppearance.DeviceDefault.Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="55dp"
            android:backgroundTint="@color/red"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:text="@string/disconnect"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/activity_toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="33dp"-->
<!--        android:layout_marginBottom="444dp"-->
<!--        android:background="@color/light_blue"-->
<!--        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/supported_devices_cardView"-->
<!--        app:layout_constraintVertical_bias="0.36">-->
<!--        -->
<!--    </androidx.appcompat.widget.Toolbar>-->

    <TextView
        android:id="@+id/readings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:text="@string/readings"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supported_devices_cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/scanned_devices_cardView"
        android:layout_width="380dp"
        android:layout_height="390dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-90dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readings_title">

        <TextView
            android:id="@+id/pre_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"/>

        <include
            android:id="@+id/list_item_header"
            layout="@layout/list_item_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ListView
            android:id="@+id/dataListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_toolbar"
            app:layout_constraintVertical_bias="0.263" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/exportHistory"
        style="@android:style/TextAppearance.DeviceDefault.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/blue_primary"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:text="@string/exportHistory"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanned_devices_cardView" />

    <Button
        android:id="@+id/exportStream"
        style="@android:style/TextAppearance.DeviceDefault.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/blue_primary"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:text="@string/exportStream"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanned_devices_cardView"
        app:layout_constraintVertical_bias="0.571" />

</androidx.constraintlayout.widget.ConstraintLayout>